--- a/usTechSolution/package.json
+++ b/usTechSolution/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.19",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
